<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Places</string>
    <string name="TV_details_name">Name</string>
    <string name="TV_details_description">Description: </string>
    <string name="Btn_make_reservation_online">Make reservation online</string>
    <string name="Btn_note_reservation">Note reservation</string>
    <string name="ET_add_reservation_name">Reservation on</string>
    <string name="ET_add_place_name">Name</string>
    <string name="ET_add_place_desription">Description</string>
    <string name="Btn_suggest_place">Suggest it</string>
    <string name="add_place_actionbar_label">Add new</string>
    <string name="details_activity_label">Details</string>
    <string name="details_actionbar_label">Details</string>
    <string name="Btn_add_acount_cancel">Cancel</string>
    <string name="Btn_add_acount_ok">OK</string>
    <string name="account_type">com.garfield.places</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="TV_choose_account_text">Choose account type</string>
    <string name="Btn_choose_account_place">Place</string>
    <string name="Btn_choose_account_customer">Customer</string>
    <string name="Btn_add_place_img">Add image</string>
    <string name="Btn_add_place_geo">Add location</string>
    <string name="Btn_save_reservation">Save</string>
    <string name="reservations_label">Reservations</string>
    <string name="reservation_label">Reservation</string>
	<string name="refresh">Refresh</string>
	<string name="suggest">Suggest</string>
	<string name="ET_add_place_website">www.example.com</string>
	<string name="ET_add_place_phone_number">Phone Number</string>
	<string name="ET_add_place_open_from_to">Open time, example: 08:00-22:30</string>
</resources>