<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:text="@string/TV_choose_account_text" />

    <Button
        android:id="@+id/Btn_account_type_place"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Btn_choose_account_place" />

    <Button
        android:id="@+id/Btn_account_type_customer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Btn_choose_account_customer"/>

</LinearLayout>