<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TV_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_details_name" />

        <TextView
            android:id="@+id/TV_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_details_description" />

        <ImageView
            android:id="@+id/IV_details_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ImageView>

        <fragment
            android:id="@+id/MAP_details"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <Button
            android:id="@+id/Btn_note_reservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_note_reservation" />

        <Button
            android:id="@+id/Btn_make_reservation_online"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_make_reservation_online" />
    </LinearLayout>

</ScrollView>