<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/ET_add_place_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ET_add_place_name" />

        <EditText
            android:id="@+id/ET_add_place_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ET_add_place_desription" />

        <ImageView
            android:id="@+id/IV_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ImageView>

        <fragment
            android:id="@+id/MAP_add_place"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <Button
            android:id="@+id/Btn_add_place_img"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_add_place_img" />

        <Button
            android:id="@+id/Btn_add_place_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Take photo" />
        

        <Button
            android:id="@+id/Btn_suggest_place"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_suggest_place" />
    </LinearLayout>

</ScrollView>